# web

./: README.md  index.html  web.html
.github/workflows/: ci-minimal.yml
ros2_diffbot_stack/: .gitignore  README.md
ros2_diffbot_stack/docs/: architecture.md  debug_notes.md
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/: package.xml  setup.cfg  setup.py
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/config/: nav2_params.yaml  slam_params.yaml
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/diffbot_bringup/: __init__.py
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/launch/: nav.launch.py  sim.launch.py  slam.launch.py
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/rviz/: nav.rviz
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/urdf/: diffbot.urdf.xacro
ros2_diffbot_stack/ros2_ws/src/diffbot_bringup/worlds/: simple.world
